<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_job"
            android:icon="@drawable/ic_job_black_24dp"
            android:title="@string/jobs" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/about_us"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/logout" />

    </group>


</menu>
