<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.ui.JobDetailActivity"
    tools:showIn="@layout/activity_job_detail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:id="@+id/layoutDetailFirst"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background_login">

            <ImageView
                android:id="@+id/imgLogoCompanyDetail"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:src="@drawable/np_image"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layoutDetailFirst">
            <TextView
                android:id="@+id/txtCompanyNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="10dp"
                android:text="@string/title_activity_job_detail"
                android:layout_below="@+id/txtTitleCompanyDetail" />

            <TextView
                android:id="@+id/txtTitleCompanyDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:text="@string/title_job"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/txtDescriptionDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/description_detail"
                android:padding="10dp"
                android:layout_below="@+id/txtCompanyNameDetail" />
            <LinearLayout
                android:id="@+id/layoutDetail"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtDescriptionDetail"
                android:padding="10dp"
                android:weightSum="3">
                <TextView
                    android:id="@+id/txtCompanyLocationDetail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/txtCompanyUrlDetail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/txtCompanyCreatedDetail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/layoutDetail">
                <TextView
                    android:id="@+id/location"
                    android:text="@string/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>
                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/location"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
